# hikptool

./: CMakeLists.txt  README.en.md  README.md  hikp_init_main.c  hikp_register.ld
core_ring/: hikp_core_ring.c  hikp_core_ring.h
cxl/func_lib/cxl_func/: cxl_feature.c  cxl_feature.h
cxl/usr_cmd/cmd_analysis/: cxl_cmd_cpa.c  cxl_cmd_dl.c  cxl_cmd_membar.c  cxl_cmd_rcrb.c  cxl_tool_include.h
hccs/: hikp_hccs.c  hikp_hccs.h
info_collect/: hikp_collect.h  hikp_collect_acc.c  hikp_collect_common.c  hikp_collect_imp.c  hikp_collect_lib.c  hikp_collect_lib.h  hikp_collect_main.c  hikp_collect_nic.c  hikp_collect_pcie.c  hikp_collect_roce.c  hikp_collect_sas.c  hikp_collect_sdma.c  hikp_collect_serdes.c  hikp_collect_socip.c  hikp_collect_socip.h
libhikptdev/: CMakeLists.txt
libhikptdev/include/: hikptdev_plug.h
libhikptdev/src/rciep/: CMakeLists.txt  hikpt_rciep.c  hikpt_rciep.h
net/: hikp_net_lib.c  hikp_net_lib.h
net/nic/nic_dfx/: hikp_nic_dfx.c  hikp_nic_dfx.h
net/nic/nic_fd/: hikp_nic_fd.c  hikp_nic_fd.h
net/nic/nic_fec/: hikp_nic_fec.c  hikp_nic_fec.h
net/nic/nic_ft/: hikp_nic_port_fault.c  hikp_nic_port_fault.h
net/nic/nic_gro/: hikp_nic_gro.c  hikp_nic_gro.h
net/nic/nic_info/: hikp_nic_info.c  hikp_nic_info.h
net/nic/nic_led/: hikp_nic_led.c  hikp_nic_led.h
net/nic/nic_log/: hikp_nic_log.c  hikp_nic_log.h
net/nic/nic_mac/: hikp_mac_cmd.h  hikp_nic_mac_dump.c  hikp_nic_mac_dump.h  hikp_nic_port.c  hikp_nic_port.h  hikp_nic_xsfp.c  hikp_nic_xsfp.h
net/nic/nic_ncsi/: hikp_nic_ncsi.c  hikp_nic_ncsi.h
net/nic/nic_notify_pkt/: hikp_nic_notify_pkt.c  hikp_nic_notify_pkt.h
net/nic/nic_ppp/: hikp_nic_ppp.c  hikp_nic_ppp.h
net/nic/nic_qos/: hikp_nic_qos.c  hikp_nic_qos.h
net/nic/nic_queue/: hikp_nic_queue.c  hikp_nic_queue.h
net/nic/nic_rss/: hikp_nic_rss.c  hikp_nic_rss.h
net/nic/nic_torus/: hikp_nic_torus.c  hikp_nic_torus.h
net/roce/roce_bond/: hikp_roce_bond.c  hikp_roce_bond.h
net/roce/roce_caep/: hikp_roce_caep.c  hikp_roce_caep.h
net/roce/roce_dfx_sta/: hikp_roce_dfx_sta.c  hikp_roce_dfx_sta.h
net/roh/: hikp_roh_cmd.h  hikp_roh_mac.c  hikp_roh_mac.h  hikp_roh_show_bp.c  hikp_roh_show_bp.h  hikp_roh_show_mib.c  hikp_roh_show_mib.h
ossl/: ossl_user_linux.c  ossl_user_linux.h
ras/ras_func/: ras_common.h  ras_dump_data.c  ras_dump_data.h
ras/user_cmd/: ras_cmd_dump.c  ras_tools_include.h
sas/sas_func/: sas_analy_queue.c  sas_analy_queue.h  sas_common.h  sas_dump_reg.c  sas_dump_reg.h  sas_read_dev.c  sas_read_dev.h  sas_read_dqe.c  sas_read_dqe.h  sas_read_errcode.c  sas_read_errcode.h
sata/sata_func/: sata_common.h  sata_dump_reg.c  sata_dump_reg.h
sdma/sdma_func/: sdma_common.h  sdma_dump_reg.c  sdma_dump_reg.h
sdma/user_cmd/: sdma_cmd_dump.c  sdma_tools_include.h
serdes/: hikp_serdes.c  hikp_serdes.h
socip/: hikp_socip.h  hikp_socip_dumpreg.c
tool_lib/: op_logs.c  op_logs.h  tool_cmd.c  tool_cmd.h  tool_lib.c  tool_lib.h
ub/imp/: hikp_imp_cmd.c  hikp_imp_cmd.h  hikp_imp_log.c  hikp_imp_log.h
ub/scc/: hikp_scc_cmd.c  hikp_scc_cmd.h  hikp_scc_log.c  hikp_scc_log.h  hikp_scc_version.c  hikp_scc_version.h
(+89 files in other folders)
